[package]
name = "tdh-rs"
version = "0.0.1"
authors = ["Alex Davidson <coela@alxdavids.xyz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
curve25519-dalek = "3.0.2"
rand_core = "0.5.1"
rand = "0.8.3"
bit-vec = "0.6.3"
